kubernetes/apps/owncloud/owncloud-ocis/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: owncloud
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`owncloud.toskbot.xyz`)
      kind: Rule
      services:
        - name: proxy
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: owncloud.toskbot.xyz
